<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/entree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entree"/>
        <EditText
            android:id="@+id/plat_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entree"
            android:hint="@string/plat_principal"/>
        <CheckBox
            android:id="@+id/fromage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/plat_principal"
            android:text="@string/fromage"/>
        <CheckBox
            android:id="@+id/fruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fromage"
            android:text="@string/fruit"/>
        <RadioGroup
            android:id="@+id/midi_soir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fruit">
            <RadioButton
                android:id="@+id/midi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/midi"
                android:layout_below="@id/midi_soir"/>
            <RadioButton
                android:id="@+id/soir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/soir"
                android:layout_below="@id/midi"/>
        </RadioGroup>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validation"
            android:layout_below="@id/midi_soir"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_button"
            android:text="@string/cancelation"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>